# RoomateFinder

./: package-lock.json
backend/: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
backend/include/: DBManager.h  Matcher.h  Profile.h  Recommender.h  UserOnSwipe.h
backend/include/crow/: crow_all.h
backend/src/: DBManager.cpp  Matcher.cpp  ParseUser.cpp  Recommender.cpp  UserOnSwipe.cpp  main.cpp
backend/test/: importData.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/Pages/: ChatPage.css  ChatPage.jsx
frontend/src/components/: ProfileBrowser.jsx  SwipeCard.css  SwipeCard.jsx  UserCard.jsx
frontend/src/pages/: HomePage.css  HomePage.jsx
